Make API test run for stable 26 and 27 run in php8.2
Signed-off-by: sagargurung1001@gmail.com <sagargurung1001@gmail.com>

--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -177,6 +177,10 @@ jobs:
           - isScheduledEventNightly: false
             phpVersionMinor: 1
           - isScheduledEventNightly: false
+            nextcloudVersion: stable28
+            phpVersionMinor: 2
+          - isScheduledEventNightly: false
+            nextcloudVersion: stable29
             phpVersionMinor: 2
     runs-on: ubuntu-20.04
     container:
