--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"lint:fix": "eslint --ext .js,.vue src tests --fix",
 		"stylelint": "stylelint css src",
 		"stylelint:fix": "stylelint css src --fix",
-		"test:unit": "jest --silent",
+		"test:unit": "jest",
 		"test:unit:watch": "jest --watch --no-coverage"
 	},
 	"repository": {
@@ -40,7 +40,7 @@
 	"dependencies": {
 		"@mdi/svg": "^7.3.67",
 		"@nextcloud/auth": "^2.0.0",
-		"@nextcloud/axios": "^2.1.0",
+		"@nextcloud/axios": "^2.3.0",
 		"@nextcloud/dialogs": "^3.2.0",
 		"@nextcloud/files": "^3.0.0-beta.26",
 		"@nextcloud/initial-state": "^2.0.0",
@@ -50,7 +50,7 @@
 		"@nextcloud/vue": "^8.12.0",
 		"dompurify": "^2.4.0",
 		"lodash": "^4.17.21",
-		"vue": "^2.7.12",
+		"vue": "^2.7.16",
 		"vue-material-design-icons": "^5.1.2"
 	},
 	"devDependencies": {
@@ -59,10 +59,12 @@
 		"@nextcloud/eslint-config": "^8.1.2",
 		"@nextcloud/stylelint-config": "^2.2.0",
 		"@nextcloud/webpack-vue-config": "^5.3.0",
-		"@vue/cli-plugin-unit-jest": "5.0.6",
 		"@vue/test-utils": "1.3.4",
-		"@vue/vue2-jest": "^27.0.0",
+		"@vue/vue2-jest": "^29.2.6",
 		"eslint-webpack-plugin": "^4.0.1",
-		"stylelint-webpack-plugin": "^4.1.1"
-	}
+		"stylelint-webpack-plugin": "^4.1.1",
+    "vue-template-compiler": "^2.7.16",
+    "babel-jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0"
+  }
 }
