--- a/package.json
+++ b/package.json
@@ -39,32 +39,36 @@
 	},
 	"dependencies": {
 		"@mdi/svg": "^7.3.67",
-		"@nextcloud/auth": "^2.0.0",
-		"@nextcloud/axios": "^2.3.0",
-		"@nextcloud/dialogs": "^3.2.0",
-		"@nextcloud/files": "^3.0.0-beta.26",
-		"@nextcloud/initial-state": "^2.0.0",
-		"@nextcloud/l10n": "^2.1.0",
-		"@nextcloud/moment": "^1.1.1",
-		"@nextcloud/router": "^2.0.0",
-		"@nextcloud/vue": "^8.12.0",
-		"dompurify": "^2.4.0",
-		"lodash": "^4.17.21",
-		"vue": "^2.7.16",
-		"vue-material-design-icons": "^5.1.2"
+    "@nextcloud/auth": "^2.3.0",
+    "@nextcloud/axios": "^2.5.0",
+    "@nextcloud/dialogs": "^5.3.4",
+    "@nextcloud/files": "^3.5.1",
+    "@nextcloud/initial-state": "^2.2.0",
+    "@nextcloud/l10n": "^2.2.0",
+    "@nextcloud/moment": "^1.3.1",
+    "@nextcloud/router": "^3.0.1",
+    "@nextcloud/vue": "^8.12.0",
+    "dompurify": "^3.1.5",
+    "lodash": "^4.17.21",
+    "vue": "^2.7.16",
+    "vue-material-design-icons": "^5.3.0"
 	},
 	"devDependencies": {
-		"@nextcloud/babel-config": "^1.0.0",
-		"@nextcloud/browserslist-config": "^2.3.0",
-		"@nextcloud/eslint-config": "^8.1.2",
-		"@nextcloud/stylelint-config": "^2.2.0",
-		"@nextcloud/webpack-vue-config": "^5.3.0",
-		"@vue/test-utils": "1.3.4",
-		"@vue/vue2-jest": "^29.2.6",
+    "@babel/core": "^7.24.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.24.3",
+		"@nextcloud/browserslist-config": "^3.0.0",
+    "@nextcloud/eslint-config": "^8.3.0",
+    "@nextcloud/stylelint-config": "^2.2.0",
+    "@nextcloud/webpack-vue-config": "^5.3.0",
+    "@vue/test-utils": "^1.3.6",
+    "@vue/vue2-jest": "^29.2.6",
 		"eslint-webpack-plugin": "^4.0.1",
 		"stylelint-webpack-plugin": "^4.1.1",
     "vue-template-compiler": "^2.7.16",
     "babel-jest": "^29.0.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
+    "vue-loader": "^15.11.1"
   }
 }
