--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-	"name": "integration_openproject",
-	"version": "0.0.1",
-	"description": "OpenProject Integration",
-	"main": "index.js",
-	"directories": {
-		"test": "tests"
-	},
-	"scripts": {
-		"build": "NODE_ENV=production webpack --progress --config webpack.js",
-		"dev": "NODE_ENV=development webpack --progress --config webpack.js",
-		"watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
-		"lint": "eslint --ext .js,.vue src tests",
-		"lint:fix": "eslint --ext .js,.vue src tests --fix",
-		"stylelint": "stylelint css src",
-		"stylelint:fix": "stylelint css src --fix",
-		"test:unit": "jest",
-		"test:unit:watch": "jest --watch --no-coverage"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/nextcloud/integration_openproject"
-	},
-	"keywords": [
-		"openproject"
-	],
-	"author": "Julien Veyssier",
-	"license": "AGPL-3.0",
-	"bugs": {
-		"url": "https://github.com/nextcloud/integration_openproject/issues"
-	},
-	"homepage": "https://github.com/nextcloud/integration_openproject",
-	"browserslist": [
-		"extends @nextcloud/browserslist-config"
-	],
-	"engines": {
-		"node": ">= 16.0.0",
-		"npm": "^8.0.0"
-	},
-	"dependencies": {
-		"@mdi/svg": "^7.3.67",
+  "name": "integration_openproject",
+  "version": "2.6.3",
+  "description": "OpenProject Integration",
+  "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
+  "scripts": {
+    "build": "NODE_ENV=production webpack --progress --config webpack.js",
+    "dev": "NODE_ENV=development webpack --progress --config webpack.js",
+    "watch": "NODE_ENV=development webpack --progress --watch --config webpack.js",
+    "lint": "eslint --ext .js,.vue src tests",
+    "lint:fix": "eslint --ext .js,.vue src tests --fix",
+    "stylelint": "stylelint css src",
+    "stylelint:fix": "stylelint css src --fix",
+    "test:unit": "jest --silent",
+    "test:unit:watch": "jest --watch --no-coverage"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nextcloud/integration_openproject"
+  },
+  "keywords": [
+    "openproject"
+  ],
+  "author": "Julien Veyssier",
+  "license": "AGPL-3.0",
+  "bugs": {
+    "url": "https://github.com/nextcloud/integration_openproject/issues"
+  },
+  "homepage": "https://github.com/nextcloud/integration_openproject",
+  "browserslist": [
+    "extends @nextcloud/browserslist-config"
+  ],
+  "engines": {
+    "node": ">= 16.0.0",
+    "npm": "^8.0.0"
+  },
+  "dependencies": {
+    "@mdi/svg": "^7.3.67",
     "@nextcloud/auth": "^2.3.0",
     "@nextcloud/axios": "^2.5.0",
     "@nextcloud/dialogs": "^5.3.4",
@@ -52,19 +52,19 @@
     "lodash": "^4.17.21",
     "vue": "^2.7.16",
     "vue-material-design-icons": "^5.3.0"
-	},
-	"devDependencies": {
+  },
+  "devDependencies": {
     "@babel/core": "^7.24.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.24.3",
-		"@nextcloud/browserslist-config": "^3.0.0",
-    "@nextcloud/eslint-config": "^8.3.0",
-    "@nextcloud/stylelint-config": "^2.2.0",
-    "@nextcloud/webpack-vue-config": "^5.3.0",
+    "@nextcloud/browserslist-config": "^3.0.0",
+    "@nextcloud/eslint-config": "^8.4.1",
+    "@nextcloud/stylelint-config": "^2.3.0",
+    "@nextcloud/webpack-vue-config": "^6.0.1",
     "@vue/test-utils": "^1.3.6",
     "@vue/vue2-jest": "^29.2.6",
-		"eslint-webpack-plugin": "^4.0.1",
-		"stylelint-webpack-plugin": "^4.1.1",
+    "eslint-webpack-plugin": "^4.2.0",
+    "stylelint-webpack-plugin": "^5.0.1",
     "vue-template-compiler": "^2.7.16",
     "babel-jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
