--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"require-dev": {
 		"phpunit/phpunit": "^9.5",
-		"pact-foundation/pact-php": "^7.1",
+		"pact-foundation/pact-php": "^10.0.0-beta2",
 		"friendsofphp/php-cs-fixer": "^3.5",
 		"nextcloud/coding-standard": "^1.0",
 		"behat/behat": "^3.10",
@@ -13,5 +13,10 @@
 		"cs:check": "php-cs-fixer fix --dry-run --diff"
 	},
 	"config": {
+		"allow-plugins": {
+			"phpstan/extension-installer": true,
+			"tienvx/composer-downloads-plugin": true,
+			"pact-foundation/composer-downloads-plugin": true
+		}
 	}
 }
