--- a/.github/workflows/shared_workflow.yml
+++ b/.github/workflows/shared_workflow.yml
@@ -12,14 +12,12 @@ jobs:
     strategy:
       matrix:
         nextcloudVersion: [ stable26, stable27, stable28, stable29, master ]
-        phpVersion: [ 8.0, 8.1, 8.2, 8.3]
+        phpVersion: [ 8.1, 8.2, 8.3]
         exclude:
           - nextcloudVersion: stable26
             phpVersion: 8.3
           - nextcloudVersion: stable27
             phpVersion: 8.3
-          - nextcloudVersion: master
-            phpVersion: 8.0
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout for nightly CI
